# noarr-vs-the-world

./: .gitignore  CMakeLists.txt  build.sh
halide/: 2d-jacobi.cpp  CMakeLists.txt  floyd-warshall.cpp  gemm.cpp  gram-schmidt.cpp
halide/2d-jacobi/: CMakeLists.txt
halide/2d-jacobi/src/: main.cpp
halide/floyd_warshall/: CMakeLists.txt
halide/floyd_warshall/src/: main.cpp
halide/gram-schmidt/: main.cpp
halide/gram_smidt/: CMakeLists.txt
halide/gram_smidt/src/: main.cpp
halide/matmul/: CMakeLists.txt
halide/matmul/src/: main.cpp
include/: defines.hpp
noarr/: 2d-jacobi.cpp  CMakeLists.txt  floyd-warshall.cpp  gemm.cpp  gram-schmidt.cpp
noarr/2d-jacobi/: CMakeLists.txt
noarr/2d-jacobi/src/: main.cpp
noarr/floyd-warshall/: main.cpp
noarr/floyd_warshall/: CMakeLists.txt
noarr/floyd_warshall/src/: main.cpp
noarr/gemm/: main.cpp
noarr/gram-schmidt/: CMakeLists.txt
noarr/gram-schmidt/src/: main.cpp
noarr/matmul/: CMakeLists.txt
noarr/matmul/src/: main.cpp
